--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,11 @@
 ERLC=erlc
-EFLAGS=-I ../include -o ../ebin
+EBIN=../ebin
+INCLUDE=../include
+EFLAGS=-I ${INCLUDE} -o ${EBIN}
 SRCS=`ls *.erl`
 
 all:
 	${ERLC} ${EFLAGS} ${SRCS}
+
+clean:
+	rm -rf ${EBIN}/*.beam
